added entry for foxml migration from 1.1 to 1.2